[gd_scene load_steps=23 format=3 uid="uid://ilgtuvsnokah"]

[ext_resource type="Script" uid="uid://dwiryy3cxhxpc" path="res://menus/main_menu.gd" id="1_7vrkn"]
[ext_resource type="Texture2D" uid="uid://gohxhknol14k" path="res://images/Logo particles experimental trans.png" id="2_7vrkn"]
[ext_resource type="Texture2D" uid="uid://dqlric42t6e1d" path="res://images/Blocks.png" id="2_glbon"]
[ext_resource type="Texture2D" uid="uid://bwmxylsyxoitf" path="res://images/Logo particles part 2.png" id="4_glbon"]
[ext_resource type="Texture2D" uid="uid://c5im7lht5ciiv" path="res://images/Logo fancy v2 transparent.png" id="4_nlkkf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.653105, 0.644694, 0.81381, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhts7"]

[sub_resource type="SystemFont" id="SystemFont_7vrkn"]
font_names = PackedStringArray("Rockwell")
font_italic = true
font_stretch = 200
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.317647, 0.698039, 0.345098, 1)
border_width_bottom = 5
border_color = Color(0.92, 0.75256, 0.2024, 1)
corner_radius_bottom_right = 20

[sub_resource type="SystemFont" id="SystemFont_06t4h"]
font_names = PackedStringArray("Rockwell")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06t4h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jix8l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glbon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlkkf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qe12f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fu7sn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qtwp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dy7ct"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0o4t1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0k4wn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5v2v"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rhts7")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="LeftSide" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Alignment (use this)" type="HSeparator" parent="PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.88
theme_override_styles/separator = SubResource("StyleBoxEmpty_rhts7")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/LeftSide/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BlocksIcon" type="TextureRect" parent="PanelContainer/HBoxContainer/LeftSide/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_glbon")
expand_mode = 2

[node name="MAIN MENU Text" type="RichTextLabel" parent="PanelContainer/HBoxContainer/LeftSide/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(228.695, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_7vrkn")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "MAIN MENU"
fit_content = true

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/LeftSide/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="PlayButton" type="Button" parent="PanelContainer/HBoxContainer/LeftSide/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(600, 75)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("SystemFont_06t4h")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nlkkf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qe12f")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fu7sn")
text = "Play"
alignment = 0

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/LeftSide/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="OptionsButton" type="Button" parent="PanelContainer/HBoxContainer/LeftSide/PanelContainer2/MarginContainer"]
custom_minimum_size = Vector2(600, 75)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("SystemFont_06t4h")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fu7sn")
text = "Options"
alignment = 0

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/LeftSide/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="CreditsButton" type="Button" parent="PanelContainer/HBoxContainer/LeftSide/PanelContainer3/MarginContainer"]
custom_minimum_size = Vector2(600, 75)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("SystemFont_06t4h")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fu7sn")
text = "Credits"
alignment = 0

[node name="PanelContainer4" type="PanelContainer" parent="PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7vrkn")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/LeftSide/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="QuitButton" type="Button" parent="PanelContainer/HBoxContainer/LeftSide/PanelContainer4/MarginContainer"]
custom_minimum_size = Vector2(600, 75)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("SystemFont_06t4h")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_06t4h")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8qtwp")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dy7ct")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0o4t1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fu7sn")
text = "Quit"
alignment = 0

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/LeftSide"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_7vrkn")

[node name="RightSide" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_j5v2v")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/RightSide"]
layout_mode = 2
theme_override_constants/margin_right = 50

[node name="GameLogo!!!" type="TextureRect" parent="PanelContainer/HBoxContainer/RightSide/MarginContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_7vrkn")
expand_mode = 2
stretch_mode = 5

[node name="GameLogo!" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 790.0
offset_right = 1870.0
offset_bottom = 1080.0
texture = ExtResource("4_nlkkf")
expand_mode = 2
stretch_mode = 5

[node name="GameLogo! (particles)" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 790.0
offset_right = 1870.0
offset_bottom = 1080.0
texture = ExtResource("4_glbon")
expand_mode = 2
stretch_mode = 5

[connection signal="pressed" from="PanelContainer/HBoxContainer/LeftSide/PanelContainer/MarginContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/LeftSide/PanelContainer4/MarginContainer/QuitButton" to="." method="_on_quit_button_pressed"]
